--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
 
     <main>
         <section class="portfolio-section">
-            <div class="container portfolio-container">
+            <div class="container">
                 <h1 class="visually-hidden">Portfolio</h1>
                 <ul class="filtr-items">
                     <li><button class="filtr-button" type="button">All</button></li>
@@ -51,48 +51,66 @@
                 <ul class="portfolio-items">
                     <li class="item"><a class="portfolio-content">
                         <img src="./images/bankingapp.jpg" alt="Windows on the phone" width="360" height="300" class="portfolio-img">
-                        <h2 class="portfolio-title">Banking App Interface Concept</h2>
-                        <p  class="portfolio-descrfiltr">App</p></a>
+                        <div class="portfolio-features">
+                            <h2 class="portfolio-title">Banking App Interface Concept</h2>
+                            <p  class="portfolio-descrfiltr">App</p></a>
+                        </div>
                     </li>
                     <li class="item"><a class="portfolio-content">
                         <img src="./images/cashlesspayment.jpg" alt="Phone payment" width="360" height="300" class="portfolio-img">
-                        <h2 class="portfolio-title">Cashless Payment</h2>
-                        <p  class="portfolio-descrfiltr">Marketing</p></a>
+                        <div class="portfolio-features">
+                            <h2 class="portfolio-title">Cashless Payment</h2>
+                            <p  class="portfolio-descrfiltr">Marketing</p></a>
+                        </div>
                     </li>
                     <li class="item"><a class="portfolio-content">
                         <img src="./images/meditaionapp.jpg" alt="Laptop and phone" width="360" height="300" class="portfolio-img">
-                        <h2 class="portfolio-title">Meditaion App</h2>
-                        <p  class="portfolio-descrfiltr">App</p></a>
+                        <div class="portfolio-features">
+                            <h2 class="portfolio-title">Meditaion App</h2>
+                            <p  class="portfolio-descrfiltr">App</p></a>
+                        </div>
                     </li>
                     <li class="item"><a class="portfolio-content">
                         <img src="./images/taxiservice.jpg" alt="Car" width="360" height="300" class="portfolio-img">
-                        <h2 class="portfolio-title">Taxi Service</h2>
-                        <p  class="portfolio-descrfiltr">Marketing</p></a>
+                        <div class="portfolio-features">
+                            <h2 class="portfolio-title">Taxi Service</h2>
+                            <p  class="portfolio-descrfiltr">Marketing</p></a>
+                        </div>
                     </li>
                     <li class="item"><a class="portfolio-content">
                         <img src="./images/screenillustrations.jpg" alt="Screen Illustrations" width="360" height="300" class="portfolio-img">
-                        <h2 class="portfolio-title">Screen Illustrations</h2>
-                        <p  class="portfolio-descrfiltr">Design</p></a>
+                        <div class="portfolio-features">
+                            <h2 class="portfolio-title">Screen Illustrations</h2>
+                            <p  class="portfolio-descrfiltr">Design</p></a>
+                        </div>
                     </li>
                     <li class="item"><a class="portfolio-content">
                         <img src="./images/onlinecourses.jpg" alt="Woman with phone" width="360" height="300" class="portfolio-img">
-                        <h2 class="portfolio-title">Online Courses</h2>
-                        <p  class="portfolio-descrfiltr">Marketing</p></a>
+                        <div class="portfolio-features">
+                            <h2 class="portfolio-title">Online Courses</h2>
+                            <p  class="portfolio-descrfiltr">Marketing</p></a>
+                        </div>
                     </li>
                     <li class="item"><a class="portfolio-content">
                         <img src="./images/instagramstories.jpg" alt="Instagram Stories Concept" width="360" height="300" class="portfolio-img">
-                        <h2 class="portfolio-title">Instagram Stories Concept</h2>
-                        <p  class="portfolio-descrfiltr">Design</p></a>
+                        <div class="portfolio-features">
+                            <h2 class="portfolio-title">Instagram Stories Concept</h2>
+                            <p  class="portfolio-descrfiltr">Design</p></a>
+                        </div>
                     </li>
                     <li class="item"><a class="portfolio-content">
                         <img src="./images/organicfood.jpg" alt="A man with fruit" width="360" height="300" class="portfolio-img">
-                        <h2 class="portfolio-title">Organic Food</h2>
-                        <p  class="portfolio-descrfiltr">Web Site</p></a>
+                        <div class="portfolio-features">
+                            <h2 class="portfolio-title">Organic Food</h2>
+                            <p  class="portfolio-descrfiltr">Web Site</p></a>
+                        </div>
                     </li>
                     <li class="item"><a class="portfolio-content">
                         <img src="./images/freshcoffee.jpg" alt="Coffee" width="360" height="300" class="portfolio-img">
-                        <h2 class="portfolio-title">Fresh Coffee</h2>
-                        <p  class="portfolio-descrfiltr">Web Site</p></a>
+                        <div class="portfolio-features">
+                            <h2 class="portfolio-title">Fresh Coffee</h2>
+                            <p  class="portfolio-descrfiltr">Web Site</p></a>
+                        </div>
                     </li>
                 </ul>
             </div>
