--- a/index.html
+++ b/index.html
@@ -83,29 +83,29 @@
                     <li class="team-list-item">
                         <img src="./images/markguerrero.jpg" alt="photo Mark Guerrero" width="264" class="team-section-img">
                         <h3  class="team-section-title">Mark Guerrero</h3>
-                        <p   class="team-section-descr">Product Designer</p>
+                        <div class="team-section-descrow"><p class="team-section-descr">Product Designer</p></div>
                     </li>
                     <li class="team-list-item">
                         <img src="./images/tomford.jpg" alt="photo Tom Ford" width="264" class="team-section-img">
                         <h3  class="team-section-title">Tom Ford</h3>
-                        <p   class="team-section-descr">Frontend Developer</p>
+                        <div class="team-section-descrow"><p class="team-section-descr">Frontend Developer</p></div>
                     </li>
                     <li class="team-list-item">
                         <img src="./images/camilagarcia.jpg" alt="photo Camila Garcia" width="264" class="team-section-img">
                         <h3  class="team-section-title">Camila Garcia</h3>
-                        <p   class="team-section-descr">Marketing</p>
+                        <div class="team-section-descrow"><p class="team-section-descr">Marketing</p></div>
                     </li>
                     <li class="team-list-item">
                         <img src="./images/danielwilson.jpg" alt="photo Daniel Wilson" width="264" class="team-section-img">
                         <h3  class="team-section-title">Daniel Wilson</h3>
-                        <p   class="team-section-descr">UI Designer</p>
+                        <div class="team-section-descrow"><p class="team-section-descr">UI Designer</p></div>
                     </li>
                 </ul>
             </div>
         </section>
     </main>
     <footer class="footer">
-        <div class="container site-footer">
+        <div class="container">
             <a class="logo-footer" href="./index.html"><span class="logo-footer-part">Web</span>Studio</a>
             <p class="footer-descr">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
