--- a/index.html
+++ b/index.html
@@ -82,23 +82,31 @@
                 <ul class="team-list">
                     <li class="team-list-item">
                         <img src="./images/markguerrero.jpg" alt="photo Mark Guerrero" width="264" class="team-section-img">
-                        <h3  class="team-section-title">Mark Guerrero</h3>
-                        <div class="team-section-descrow"><p class="team-section-descr">Product Designer</p></div>
+                        <div class="team-section-descrow">
+                            <h3  class="team-section-title">Mark Guerrero</h3>
+                            <p class="team-section-descr">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-list-item">
                         <img src="./images/tomford.jpg" alt="photo Tom Ford" width="264" class="team-section-img">
-                        <h3  class="team-section-title">Tom Ford</h3>
-                        <div class="team-section-descrow"><p class="team-section-descr">Frontend Developer</p></div>
+                        <div class="team-section-descrow">
+                            <h3  class="team-section-title">Tom Ford</h3>
+                            <p class="team-section-descr">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-list-item">
                         <img src="./images/camilagarcia.jpg" alt="photo Camila Garcia" width="264" class="team-section-img">
-                        <h3  class="team-section-title">Camila Garcia</h3>
-                        <div class="team-section-descrow"><p class="team-section-descr">Marketing</p></div>
+                        <div class="team-section-descrow">
+                            <h3  class="team-section-title">Camila Garcia</h3>
+                            <p class="team-section-descr">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-list-item">
                         <img src="./images/danielwilson.jpg" alt="photo Daniel Wilson" width="264" class="team-section-img">
-                        <h3  class="team-section-title">Daniel Wilson</h3>
-                        <div class="team-section-descrow"><p class="team-section-descr">UI Designer</p></div>
+                        <div class="team-section-descrow">
+                            <h3  class="team-section-title">Daniel Wilson</h3>
+                            <p class="team-section-descr">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
